--- a/views/main.html
+++ b/views/main.html
@@ -88,7 +88,9 @@
           <p class="long-copy">{{main.searchData.description}}</p>
 
           <div style="text-align:center">
-            <button class="btn btn-ghost" ng-click="main.searchProduct()">Search on Amazon/Walmart</button>
+            <!-- <button class="btn btn-ghost" ng-click="main.searchProduct()">Search on Amazon/Walmart</button> -->
+            <!-- <a  class="btn btn-ghost" ng-click="main.searchProduct()">Search on Amazon/Walmart</button>  -->
+            <button class="amazonbutton ng-click="main.searchProduct()">Search on Amazon/Walmart</button>
           </div>
 
         </div>
